apps/argo-cd/argocd.Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: nginx-ingress-microk8s
  annotations:
spec:
  rules:
  - host: argocd.k8s.home
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: agrocd-server
              port:
                number: 443
